[gd_scene load_steps=2 format=3 uid="uid://cm7gvaws2hwen"]

[ext_resource type="Script" path="res://Scripts/Points.gd" id="1_oej0d"]

[node name="GameHandler" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oej0d")

[node name="Button_P1" type="Button" parent="."]
layout_mode = 0
offset_left = 174.0
offset_top = 73.0
offset_right = 261.0
offset_bottom = 160.0
text = "P1"

[node name="Button_P2" type="Button" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 174.0
offset_right = 266.0
offset_bottom = 262.0
text = "P2"

[node name="Points_P1" type="Label" parent="."]
layout_mode = 0
offset_left = 959.0
offset_top = 95.0
offset_right = 1030.0
offset_bottom = 161.0

[node name="Points_P2" type="Label" parent="."]
layout_mode = 0
offset_left = 966.0
offset_top = 187.0
offset_right = 1034.0
offset_bottom = 243.0

[node name="Games_Container" type="Label" parent="."]
layout_mode = 0
offset_left = 301.0
offset_top = 86.0
offset_right = 757.0
offset_bottom = 261.0

[node name="Game1_P1" type="Label" parent="Games_Container"]
layout_mode = 0
offset_right = 58.0
offset_bottom = 61.0
text = "0"

[node name="Game2_P1" type="Label" parent="Games_Container"]
layout_mode = 0
offset_left = 94.0
offset_top = 4.0
offset_right = 156.0
offset_bottom = 54.0
text = "0"

[node name="Game3_P1" type="Label" parent="Games_Container"]
layout_mode = 0
offset_left = 173.0
offset_top = 8.0
offset_right = 238.0
offset_bottom = 55.0
text = "0"

[node name="Game4_P1" type="Label" parent="Games_Container"]
layout_mode = 0
offset_left = 288.0
offset_top = 16.0
offset_right = 356.0
offset_bottom = 66.0
text = "0"

[node name="Game5_P1" type="Label" parent="Games_Container"]
layout_mode = 0
offset_left = 368.0
offset_top = 12.0
offset_right = 426.0
offset_bottom = 64.0
text = "0"

[node name="Game1_P2" type="Label" parent="Games_Container"]
layout_mode = 0
offset_top = 102.0
offset_right = 58.0
offset_bottom = 163.0
text = "0"

[node name="Game2_P2" type="Label" parent="Games_Container"]
layout_mode = 0
offset_left = 94.0
offset_top = 106.0
offset_right = 156.0
offset_bottom = 156.0
text = "0"

[node name="Game3_P2" type="Label" parent="Games_Container"]
layout_mode = 0
offset_left = 173.0
offset_top = 110.0
offset_right = 238.0
offset_bottom = 157.0
text = "0"

[node name="Game4_P2" type="Label" parent="Games_Container"]
layout_mode = 0
offset_left = 288.0
offset_top = 118.0
offset_right = 356.0
offset_bottom = 168.0
text = "0"

[node name="Game5_P2" type="Label" parent="Games_Container"]
layout_mode = 0
offset_left = 368.0
offset_top = 114.0
offset_right = 426.0
offset_bottom = 166.0
text = "0"

[connection signal="pressed" from="Button_P1" to="." method="_on_button_p_1_pressed"]
[connection signal="pressed" from="Button_P2" to="." method="_on_button_p_2_pressed"]
